# aws-lambda-terraform-registry

./: .gitignore  README.md  build_lambda.sh  build_layer.sh  main.tf  pyproject.toml
api_docs/: index.html
docs/: index.html  swagger.json
registry/: config.py  globals.py  models.py  routes.py
registry/auth/: __init__.py  bearer.py  exceptions.py  jwt.py  middleware.py
registry/aws_lambda/: __init__.py  iam_auth_lambda.py  registry_lambda.py
registry/cli/: credential_helper.py  gen_docs.py  iam_permissions_manager.py  iam_token_fetcher.py  install_terraform_credential_helper.py
registry/models/: module.py  responses.py
temp/: jwks.py  jwks.tftpl  main.tf  providers.tf
terraform-module/: README.md  api_gateway.tf  data.tf  dynamodb.tf  iam.tf  kms.tf  lambda.tf  locals.tf  rest_api.tf  s3.tf  variables.tf  versions.tf
terraform-module/submodules/lambda_function/: README.md  lambda.tf  outputs.tf  variables.tf
terraform-module/submodules/lambda_function/scripts/: build-lambda.sh
terraform-module/submodules/s3/: README.md  main.tf  outputs.tf  variables.tf
